--- a/src/secure-rag-agent/requirements.txt
+++ b/src/secure-rag-agent/requirements.txt
@@ -1,3 +1,9 @@
 dotenv
 requests
 azure-storage-blob
+azure-ai-textanalytics
+azure.keyvault
+azure.identity
+azure.search
+azure.search.documents
+six
