--- a/src/secure-rag-agent/.env
+++ b/src/secure-rag-agent/.env
@@ -1,17 +1,14 @@
-KEY_VAULT_NAME=
-KV_URI=
+###############################################################
+KV_URI="https://kv-bobs-poc.vault.azure.net/"
 
-OPENAI_API_KEY=
-OPENAI_ENDPOINT="https://your-openai.openai.azure.com/"
-OPENAI_EMBEDDING_MODEL="text-embedding-ada-002"
-OPENAI_CHAT_MODEL="gpt-4o"
+OPENAI_ENDPOINT="https://fdy-bobs-poc590067642216.openai.azure.com/"
+OPENAI_EMBEDDING_MODEL="text-embedding-bobs-poc"
+OPENAI_CHAT_MODEL="chat-bobs-poc"
 
-SEARCH_API_KEY=
-SEARCH_SERVICE_ENDPOINT="https://your-search.search.windows.net"
+SEARCH_SERVICE_ENDPOINT="https://search-bobs-poc.search.windows.net"
 INDEX_NAME="bobs-poc-index"
 
-COGNITIVE_SERVICES_KEY=
-COGNITIVE_SERVICES_ENDPOINT="https://your-language.cognitiveservices.azure.com/"
+COGNITIVE_SERVICES_ENDPOINT="https://fdy-bobs-poc590067642216.cognitiveservices.azure.com/"
 
-HMAC_SALT=
+API_VERSION="2023-05-15"
 
